[gd_scene load_steps=52 format=3 uid="uid://rat_enemy_scene"]

[ext_resource type="Script" path="res://scripts/rat_enemy.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/sprites/rat/Rat_Idle.png" id="2_idle"]
[ext_resource type="Texture2D" path="res://assets/sprites/rat/Rat_Run.png" id="3_run"]
[ext_resource type="Texture2D" path="res://assets/sprites/rat/Rat_Hit.png" id="4_hit"]
[ext_resource type="Texture2D" path="res://assets/sprites/rat/Rat_Attack.png" id="5_attack"]
[ext_resource type="Texture2D" path="res://assets/sprites/rat/Rat_Ability.png" id="6_ability"]
[ext_resource type="Texture2D" path="res://assets/sprites/rat/Rat_Attack_FX.png" id="7_attack_fx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_idle_0"]
atlas = ExtResource("2_idle")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_idle_1"]
atlas = ExtResource("2_idle")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_idle_2"]
atlas = ExtResource("2_idle")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_idle_3"]
atlas = ExtResource("2_idle")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_run_0"]
atlas = ExtResource("3_run")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_run_1"]
atlas = ExtResource("3_run")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_run_2"]
atlas = ExtResource("3_run")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_run_3"]
atlas = ExtResource("3_run")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_run_4"]
atlas = ExtResource("3_run")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_run_5"]
atlas = ExtResource("3_run")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hit_0"]
atlas = ExtResource("4_hit")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hit_1"]
atlas = ExtResource("4_hit")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hit_2"]
atlas = ExtResource("4_hit")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hit_3"]
atlas = ExtResource("4_hit")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_attack_0"]
atlas = ExtResource("5_attack")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_attack_1"]
atlas = ExtResource("5_attack")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_attack_2"]
atlas = ExtResource("5_attack")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_attack_3"]
atlas = ExtResource("5_attack")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_attack_4"]
atlas = ExtResource("5_attack")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_attack_5"]
atlas = ExtResource("5_attack")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_attack_6"]
atlas = ExtResource("5_attack")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_attack_7"]
atlas = ExtResource("5_attack")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ability_0"]
atlas = ExtResource("6_ability")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ability_1"]
atlas = ExtResource("6_ability")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ability_2"]
atlas = ExtResource("6_ability")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ability_3"]
atlas = ExtResource("6_ability")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ability_4"]
atlas = ExtResource("6_ability")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ability_5"]
atlas = ExtResource("6_ability")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ability_6"]
atlas = ExtResource("6_ability")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ability_7"]
atlas = ExtResource("6_ability")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ability_8"]
atlas = ExtResource("6_ability")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ability_9"]
atlas = ExtResource("6_ability")
region = Rect2(64, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_rat"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_idle_0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idle_1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idle_2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idle_3")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_run_0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_run_1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_run_2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_run_3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_run_4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_run_5")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hit_0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hit_1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hit_2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hit_3")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_attack_0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_attack_1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_attack_2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_attack_3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_attack_4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_attack_5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_attack_6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_attack_7")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ability_0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ability_1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ability_2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ability_3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ability_4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ability_5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ability_6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ability_7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ability_8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ability_9")
}],
"loop": false,
"name": &"ability",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_attack_fx_0"]
atlas = ExtResource("7_attack_fx")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_attack_fx_1"]
atlas = ExtResource("7_attack_fx")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_attack_fx_2"]
atlas = ExtResource("7_attack_fx")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_attack_fx_3"]
atlas = ExtResource("7_attack_fx")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_attack_fx_4"]
atlas = ExtResource("7_attack_fx")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_attack_fx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_attack_fx_0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_attack_fx_1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_attack_fx_2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_attack_fx_3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_attack_fx_4")
}],
"loop": false,
"name": &"attack_fx",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rat"]
size = Vector2(20, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hurtbox"]
size = Vector2(20, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_damagebox"]
size = Vector2(20, 16)

[node name="RatEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 1
script = ExtResource("1_script")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -34)
scale = Vector2(2, 2)
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_rat")
animation = &"run"
autoplay = "run"

[node name="AttackFX" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -34)
scale = Vector2(2, 2)
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_attack_fx")
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_rat")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_hurtbox")

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_damagebox")

[node name="RayLeft" type="RayCast2D" parent="."]
position = Vector2(-12, -2)
target_position = Vector2(0, 25)
hit_from_inside = true

[node name="RayRight" type="RayCast2D" parent="."]
position = Vector2(12, -2)
target_position = Vector2(0, 25)
hit_from_inside = true
